# snec

./: .gitignore  CMakeLists.txt  deps.cmake
include/: game_context.h  version.h.in
src/: main.c
